Created the backend  for registration and login by user authentication. evrything working fine

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,9 @@
-DB_USER= postgres
-DB_PASSWORD= Seraj@1436
-DB_DATABASE= projectUser
-DB_HOST= localhost
-DB_PORT= 5432
+DB_USER=postgres
+DB_PASSWORD=Seraj@1436
+DB_DATABASE=projectUser
+DB_HOST=localhost
+DB_PORT=5432
 
-PORT= 5000
+PORT=5000
+
+JWT_SECRET=7xN2B5qJd9FZ8cCpSgVkY3uW6rT9wR4y
