--- a/server/.env
+++ b/server/.env
@@ -5,5 +5,8 @@ DB_HOST=localhost
 DB_PORT=5432
 
 PORT=5000
+EMAIL_USER=serajshekh.project@gmail.com
+EMAIL_PASSWORD=qzag sjmx tsea bczu
 
 JWT_SECRET=7xN2B5qJd9FZ8cCpSgVkY3uW6rT9wR4y
+
