--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
